--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,10 @@
     padding: 90px 50px;
 }
 
+.header__menu {
+    display: flex;
+}
+
 .header__logo {
     width: 140px;
     display: block;
@@ -47,11 +51,15 @@
     border-bottom: 0px;
 }
 
-.address {
+.header__address {
     margin: auto 0px auto auto;
+}
+
+.address {
+
     line-height: 24px;
     font-weight: normal;
-
+    max-width: 240px;
 }
 
 .address__link {
@@ -142,12 +150,12 @@
 
 }
 
-.cover__word-spacing-right {
+.word-spacing-extended {
     word-spacing: 24px;
     margin-left: 16px;
 }
 
-.cover__word-spacing-left {
+.word-spacing-normal {
     word-spacing: 17px;
 }
 
@@ -158,7 +166,7 @@
     padding: 12px 32px;
     background-color: transparent;
     color: #fff;
-    border: 1px solid #fff;
+    border: 1px solid currentColor;
 }
 
 .lots {
@@ -188,6 +196,7 @@
 
 .lots__card-list-item {
     width: 430px;
+    flex-grow: 1;
     min-height: 450px;
     list-style: none;
 }
@@ -214,6 +223,7 @@
     height: 100%;
     width: 100%;
     background-size: cover;
+    background-position: center;
 }
 
 .card_type_film {
@@ -321,8 +331,6 @@
 .footer__address {
     margin: 0px;
 }
-
-
 
 .footer__menu-list {
     text-align: center;
